fixed the booking messge not showing

--- a/src/components/helper components/BookingMessage/BookingMessage.css
+++ b/src/components/helper components/BookingMessage/BookingMessage.css
@@ -26,6 +26,6 @@
     color: rgb(131, 0, 0);
 }
 
-.span-higlight {
+.span-highlight {
     color: white;
 }
